--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,7 +3,9 @@
   padding-inline: 10px;
   max-width: 1280px;
   margin-inline: auto;
+  width: 100%;
   box-sizing: border-box;
+  margin-block-start: auto;
 }
 
 .footer__description {
