--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,11 @@
 .header {
-  position: relative;
+  position: sticky;
+  z-index: 1;
   display: flex;
+  width: 100%;
   justify-content: space-between;
   align-items: center;
-  height: 74px;
+  min-height: 74px;
   padding-inline: var(--contentInlinePadding);
   margin-block-end: -74px;
   max-width: 1280px;
@@ -13,6 +15,11 @@
 
 .header__logo {
   display: flex;
+  transition: opacity 0.4s ease-in;
+}
+
+.header__logo:hover {
+  opacity: 0.7;
 }
 
 .header__actions-holder {
@@ -36,9 +43,7 @@
     gap: 30px;
     margin-block-end: 3px;
   }
-}
 
-@media (min-width: 1280px) {
   .header__navigation {
     flex-grow: 1;
   }
@@ -46,7 +51,7 @@
 
 .header__navigation-backdrop {
   display: none;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
@@ -65,14 +70,21 @@
   background-color: rgba(0, 0, 0, 0.3);
 }
 
+@media (min-width: 768px) {
+  .header__navigation-backdrop_active {
+    display: none;
+  }
+}
+
 .header__navigation-list-holder {
   display: none;
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   background-color: #202020;
   height: 100vh;
   width: 100vw;
+  max-width: 520px;
   z-index: 1;
 }
 
@@ -82,7 +94,7 @@
   }
 }
 
-@media (min-width: 1280px) {
+@media (min-width: 768px) {
   .header__navigation-list-holder {
     display: flex;
     position: static;
@@ -95,20 +107,14 @@
   }
 }
 
-.header__navigation-link-holder_opened {
+.header__navigation-list-holder_opened {
   display: flex;
   flex-direction: column;
   width: 100vw;
 }
 
 @media (min-width: 768px) {
-  .header__navigation-link-holder_opened {
-    width: 520px;
-  }
-}
-
-@media (min-width: 1280px) {
-  .header__navigation-link-holder_opened {
+  .header__navigation-list-holder_opened {
     width: auto;
   }
 }
@@ -132,12 +138,6 @@
 
 @media (min-width: 768px) {
   .header__navigation-list {
-    gap: 28px;
-  }
-}
-
-@media (min-width: 1280px) {
-  .header__navigation-list {
     margin-block-start: 0;
     flex-direction: row;
     gap: 17px;
@@ -155,12 +155,6 @@
 
 @media (min-width: 768px) {
   .header__navigation-list-item_last {
-    margin-block-end: 90px;
-  }
-}
-
-@media (min-width: 1280px) {
-  .header__navigation-list-item_last {
     margin-block: auto;
     margin-inline: auto 0;
   }
@@ -175,7 +169,7 @@
   line-height: normal;
 }
 
-@media (min-width: 1280px) {
+@media (min-width: 768px) {
   .header__navigation-link {
     font-size: 13px;
     font-style: normal;
@@ -189,7 +183,7 @@
   text-underline-offset: 5px;
 }
 
-@media (min-width: 1280px) {
+@media (min-width: 768px) {
   .header__navigation-link_active {
     text-decoration: none;
     font-weight: 500;
@@ -204,7 +198,7 @@
   font-weight: 500;
 }
 
-@media (min-width: 1280px) {
+@media (min-width: 768px) {
   .header__navigation-link_with-image {
     gap: 11px;
   }
@@ -263,17 +257,14 @@
   height: 43px;
   background: transparent url("../../images/burger.svg");
   cursor: pointer;
+  transition: opacity 0.4s ease-in;
+}
+
+.header__menu-button:hover {
+  opacity: 0.7;
 }
 
 @media (min-width: 768px) {
-  .header__menu-button {
-    width: 44px;
-    height: 44px;
-    background-image: url("../../images/burger-large.svg");
-  }
-}
-
-@media (min-width: 1280px) {
   .header__menu-button {
     display: none;
   }
@@ -288,9 +279,15 @@
   background: transparent url("../../images/close.svg") center;
   margin-inline: auto 22px;
   margin-block-start: 22px;
+  cursor: pointer;
+  transition: opacity 0.4s ease-in;
 }
 
-@media (min-width: 1280px) {
+.header__menu-button-close:hover {
+  opacity: 0.7;
+}
+
+@media (min-width: 768px) {
   .header__menu-button-close {
     display: none;
   }
